// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mailer > copyToSentFolder > should copy the email to the sent folder 1`] = `
"From: test@example.com
To: Me <test@example.com>
Subject: Test


MIME-Version: 1.0
Content-Type: multipart/alternative;



Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: 7bit

Test

Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: 7bit

<p>Test</p>

"
`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > en > should render appEmailQuotaLimitHit 0 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > en > should render appEmailQuotaLimitHit 0 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>Your app Test App has hit its email quota limit.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Email quota hit",
  "text": "Hello,

Your app Test App has hit its email quota limit.

Kind regards,

_The Appsemble Team_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > en > should render appEmailQuotaLimitHit 1 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > en > should render appEmailQuotaLimitHit 1 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>Your app Test App has hit its email quota limit.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Email quota hit",
  "text": "Hello John Doe,

Your app Test App has hit its email quota limit.

Kind regards,

_The Appsemble Team_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > nl > should render appEmailQuotaLimitHit 0 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > nl > should render appEmailQuotaLimitHit 0 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>De app Test App heeft de limiet voor het e-mailquotum bereikt.</p>
<p>Met vriendelijke groet,</p>
<p>Het Appsemble Team_</p>
</body>
</html>
",
  "subject": "E-mailquotum bereikt",
  "text": "Hallo,

De app Test App heeft de limiet voor het e-mailquotum bereikt.

Met vriendelijke groet,

Het Appsemble Team\\_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > nl > should render appEmailQuotaLimitHit 1 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appEmailQuotaLimitHit > nl > should render appEmailQuotaLimitHit 1 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo John Doe,</p>
<p>De app Test App heeft de limiet voor het e-mailquotum bereikt.</p>
<p>Met vriendelijke groet,</p>
<p>Het Appsemble Team_</p>
</body>
</html>
",
  "subject": "E-mailquotum bereikt",
  "text": "Hallo John Doe,

De app Test App heeft de limiet voor het e-mailquotum bereikt.

Met vriendelijke groet,

Het Appsemble Team\\_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > en > should render appMemberEmailChange 0 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > en > should render appMemberEmailChange 0 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>You have changed your email address for Test App. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards</p>
<p>, <em>Test App</em></p>
</body>
</html>
",
  "subject": "Email changed",
  "text": "Hello,

You have changed your email address for Test App. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards

, _Test App_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > en > should render appMemberEmailChange 1 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > en > should render appMemberEmailChange 1 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>You have changed your email address for Test App. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards</p>
<p>, <em>Test App</em></p>
</body>
</html>
",
  "subject": "Email changed",
  "text": "Hello John Doe,

You have changed your email address for Test App. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards

, _Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > nl > should render appMemberEmailChange 0 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > nl > should render appMemberEmailChange 0 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Je hebt jouw e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "E-mail gewijzigd",
  "text": "Hallo,

Je hebt jouw e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > nl > should render appMemberEmailChange 1 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > appMemberEmailChange > nl > should render appMemberEmailChange 1 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Beste John Doe,</p>
<p>Je hebt jouw e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "E-mail gewijzigd",
  "text": "Beste John Doe,

Je hebt jouw e-mailadres voor Test App gewijzigd. Voordat je jouw account kunt gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 0 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 0 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address</p>
<p><strong>Didn’t request this email?</strong>.</p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Email added to account",
  "text": "Hello,

You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.

Please click [this link](https://example.com) to verify your email address

**Didn’t request this email?**.

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.

Kind regards,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 1 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 1 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address</p>
<p><strong>Didn’t request this email?</strong>.</p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Email added to account",
  "text": "Hello John Doe,

You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.

Please click [this link](https://example.com) to verify your email address

**Didn’t request this email?**.

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.

Kind regards,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 2 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 2 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address</p>
<p><strong>Didn’t request this email?</strong>.</p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Email added to account",
  "text": "Hello,

You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.

Please click [this link](https://example.com) to verify your email address

**Didn’t request this email?**.

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.

Kind regards,

_The Appsemble Team_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 3 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > en > should render emailAdded 3 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address</p>
<p><strong>Didn’t request this email?</strong>.</p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Email added to account",
  "text": "Hello John Doe,

You have registered a new email address to your account. In order to make full use of this email, we need to verify your email address.

Please click [this link](https://example.com) to verify your email address

**Didn’t request this email?**.

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will be done with this email address.

Kind regards,

_The Appsemble Team_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 0 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 0 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik op <a href="https://example.com">deze link</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong>.</p>
<p>Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "E-mailadres toegevoegd aan account",
  "text": "Hallo,

Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.

Klik op [deze link](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**.

Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.

Met vriendelijke groet,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 1 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 1 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo John Doe,</p>
<p>Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik op <a href="https://example.com">deze link</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong>.</p>
<p>Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "E-mailadres toegevoegd aan account",
  "text": "Hallo John Doe,

Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.

Klik op [deze link](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**.

Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 2 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 2 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik op <a href="https://example.com">deze link</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong>.</p>
<p>Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.</p>
<p>Met vriendelijke groet,</p>
<p><em>Het Appsemble Team</em></p>
</body>
</html>
",
  "subject": "E-mailadres toegevoegd aan account",
  "text": "Hallo,

Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.

Klik op [deze link](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**.

Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.

Met vriendelijke groet,

_Het Appsemble Team_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 3 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > emailAdded > nl > should render emailAdded 3 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo John Doe,</p>
<p>Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik op <a href="https://example.com">deze link</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong>.</p>
<p>Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.</p>
<p>Met vriendelijke groet,</p>
<p><em>Het Appsemble Team</em></p>
</body>
</html>
",
  "subject": "E-mailadres toegevoegd aan account",
  "text": "Hallo John Doe,

Je hebt een nieuw e-mailadres geregistreerd voor je account. Om volledig gebruik te kunnen maken van deze e-mail, moeten we jouw e-mailadres verifiëren.

Klik op [deze link](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**.

Geen zorgen! Mogelijk is je adres per ongeluk ingevoerd. Als je deze e-mail negeert of verwijdert, wordt er niets met dit e-mailadres gedaan.

Met vriendelijke groet,

_Het Appsemble Team_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > en > should render groupInvite 0 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > en > should render groupInvite 0 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>You have been invited to join the group <strong>Test Group</strong> for the app <strong>Test App</strong>.</p>
<p>You can accept this invitation by following <a href="https://example.com">this link</a>.</p>
<p>Kind regards,</p>
<p><em>The Test App Group</em></p>
</body>
</html>
",
  "subject": "Invited to group",
  "text": "Hello,

You have been invited to join the group **Test Group** for the app **Test App**.

You can accept this invitation by following [this link](https://example.com).

Kind regards,

_The Test App Group_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > en > should render groupInvite 1 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > en > should render groupInvite 1 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>You have been invited to join the group <strong>Test Group</strong> for the app <strong>Test App</strong>.</p>
<p>You can accept this invitation by following <a href="https://example.com">this link</a>.</p>
<p>Kind regards,</p>
<p><em>The Test App Group</em></p>
</body>
</html>
",
  "subject": "Invited to group",
  "text": "Hello John Doe,

You have been invited to join the group **Test Group** for the app **Test App**.

You can accept this invitation by following [this link](https://example.com).

Kind regards,

_The Test App Group_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > nl > should render groupInvite 0 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > nl > should render groupInvite 0 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Je bent uitgenodigd om deel uit te maken van het group <strong>Test Group</strong> voor de app <strong>Test App</strong>.</p>
<p>Je kunt deze uitnodiging accepteren door <a href="https://example.com">deze link</a> te volgen.</p>
<p>Met vriendelijke groet,</p>
<p><em>Het Test App Team</em></p>
</body>
</html>
",
  "subject": "Uitgenodigd voor group",
  "text": "Hallo,

Je bent uitgenodigd om deel uit te maken van het group **Test Group** voor de app **Test App**.

Je kunt deze uitnodiging accepteren door [deze link](https://example.com) te volgen.

Met vriendelijke groet,

_Het Test App Team_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > nl > should render groupInvite 1 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > groupInvite > nl > should render groupInvite 1 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo John Doe,</p>
<p>Je bent uitgenodigd om deel uit te maken van het group <strong>Test Group</strong> voor de app <strong>Test App</strong>.</p>
<p>Je kunt deze uitnodiging accepteren door <a href="https://example.com">deze link</a> te volgen.</p>
<p>Met vriendelijke groet,</p>
<p><em>Het Test App Team</em></p>
</body>
</html>
",
  "subject": "Uitgenodigd voor group",
  "text": "Hallo John Doe,

Je bent uitgenodigd om deel uit te maken van het group **Test Group** voor de app **Test App**.

Je kunt deze uitnodiging accepteren door [deze link](https://example.com) te volgen.

Met vriendelijke groet,

_Het Test App Team_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > en > should render organizationInvite 0 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > en > should render organizationInvite 0 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>You have been invited to join the organization <strong>Test Organization</strong>.</p>
<p>Joining an organization allows you to view private applications as well as create and edit apps belonging to an organization.</p>
<p>You can accept or decline this invitation by following <a href="https://example.com">this link</a>.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Invited to organization",
  "text": "Hello,

You have been invited to join the organization **Test Organization**.

Joining an organization allows you to view private applications as well as create and edit apps belonging to an organization.

You can accept or decline this invitation by following [this link](https://example.com).

Kind regards,

_The Appsemble Team_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > en > should render organizationInvite 1 for locale en 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > en > should render organizationInvite 1 for locale en 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>You have been invited to join the organization <strong>Test Organization</strong>.</p>
<p>Joining an organization allows you to view private applications as well as create and edit apps belonging to an organization.</p>
<p>You can accept or decline this invitation by following <a href="https://example.com">this link</a>.</p>
<p>Kind regards,</p>
<p><em>The Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Invited to organization",
  "text": "Hello John Doe,

You have been invited to join the organization **Test Organization**.

Joining an organization allows you to view private applications as well as create and edit apps belonging to an organization.

You can accept or decline this invitation by following [this link](https://example.com).

Kind regards,

_The Appsemble Team_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > nl > should render organizationInvite 0 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > nl > should render organizationInvite 0 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Je bent uitgenodigd om lid te worden van de organisatie <strong>Test Organization</strong>.</p>
<p>Als je lid wordt van een organisatie, kun je privéapplicaties bekijken en apps van een organisatie maken en bewerken.</p>
<p>Je kunt deze uitnodiging accepteren of weigeren door <a href="https://example.com">deze link</a> te volgen.</p>
<p>Met vriendelijke groet,</p>
<p><em>Het Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Uitgenodigd voor organisatie",
  "text": "Hallo,

Je bent uitgenodigd om lid te worden van de organisatie **Test Organization**.

Als je lid wordt van een organisatie, kun je privéapplicaties bekijken en apps van een organisatie maken en bewerken.

Je kunt deze uitnodiging accepteren of weigeren door [deze link](https://example.com) te volgen.

Met vriendelijke groet,

_Het Appsemble Team_
",
  "to": "test@example.com",
}
`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > nl > should render organizationInvite 1 for locale nl 1`
] = `undefined`;

exports[
  `Mailer > sendTranslatedEmail > organizationInvite > nl > should render organizationInvite 1 for locale nl 2`
] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo John Doe,</p>
<p>Je bent uitgenodigd om lid te worden van de organisatie <strong>Test Organization</strong>.</p>
<p>Als je lid wordt van een organisatie, kun je privéapplicaties bekijken en apps van een organisatie maken en bewerken.</p>
<p>Je kunt deze uitnodiging accepteren of weigeren door <a href="https://example.com">deze link</a> te volgen.</p>
<p>Met vriendelijke groet,</p>
<p><em>Het Appsemble Team</em></p>
</body>
</html>
",
  "subject": "Uitgenodigd voor organisatie",
  "text": "Hallo John Doe,

Je bent uitgenodigd om lid te worden van de organisatie **Test Organization**.

Als je lid wordt van een organisatie, kun je privéapplicaties bekijken en apps van een organisatie maken en bewerken.

Je kunt deze uitnodiging accepteren of weigeren door [deze link](https://example.com) te volgen.

Met vriendelijke groet,

_Het Appsemble Team_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`Mailer > sendTranslatedEmail > resend > en > should render resend 0 for locale en 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > resend > en > should render resend 0 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Confirm account registration",
  "text": "Hello,

Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.

Please click [this link](https://example.com) to verify your email address.

**Didn’t request this email?**

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.

Kind regards,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[`Mailer > sendTranslatedEmail > resend > en > should render resend 1 for locale en 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > resend > en > should render resend 1 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">this link</a> to verify your email address.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Confirm account registration",
  "text": "Hello John Doe,

Someone has requested to resend the verification key for your account. Before you can use your account, we need to verify your email address.

Please click [this link](https://example.com) to verify your email address.

**Didn’t request this email?**

No worries! Your address may have been entered by mistake. If you ignore or delete this email, nothing will happen to your account.

Kind regards,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`Mailer > sendTranslatedEmail > resend > nl > should render resend 0 for locale nl 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > resend > nl > should render resend 0 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Accountregistratie bevestigen",
  "text": "Hallo,

Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**

Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.

Met vriendelijke groet,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[`Mailer > sendTranslatedEmail > resend > nl > should render resend 1 for locale nl 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > resend > nl > should render resend 1 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Beste John Doe,</p>
<p>Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Accountregistratie bevestigen",
  "text": "Beste John Doe,

Iemand heeft gevraagd om de verificatiesleutel voor jouw account opnieuw te verzenden. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

**Heb je deze e-mail niet aangevraagd?**

Geen zorgen! Het kan zijn dat jouw e-mailadres per ongeluk is ingevoerd. Als je deze e-mail negeert of verwijdert, gebeurt er niets met jouw account.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`Mailer > sendTranslatedEmail > reset > en > should render reset 0 for locale en 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > reset > en > should render reset 0 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>A password reset has been requested for your account. Please click <a href="https://example.com">here</a> to reset your password.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>Your email address may have been entered by mistake. This email can be ignored safely.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Password reset",
  "text": "Hello,

A password reset has been requested for your account. Please click [here](https://example.com) to reset your password.

**Didn’t request this email?**

Your email address may have been entered by mistake. This email can be ignored safely.

Kind regards,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[`Mailer > sendTranslatedEmail > reset > en > should render reset 1 for locale en 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > reset > en > should render reset 1 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>A password reset has been requested for your account. Please click <a href="https://example.com">here</a> to reset your password.</p>
<p><strong>Didn’t request this email?</strong></p>
<p>Your email address may have been entered by mistake. This email can be ignored safely.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Password reset",
  "text": "Hello John Doe,

A password reset has been requested for your account. Please click [here](https://example.com) to reset your password.

**Didn’t request this email?**

Your email address may have been entered by mistake. This email can be ignored safely.

Kind regards,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`Mailer > sendTranslatedEmail > reset > nl > should render reset 0 for locale nl 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > reset > nl > should render reset 0 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Er is een wachtwoordherstel aangevraagd voor jouw account. Klik <a href="https://example.com">hier</a> om jouw wachtwoord opnieuw in te stellen.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Wachtwoordherstel",
  "text": "Hallo,

Er is een wachtwoordherstel aangevraagd voor jouw account. Klik [hier](https://example.com) om jouw wachtwoord opnieuw in te stellen.

**Heb je deze e-mail niet aangevraagd?**

Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.

Met vriendelijke groet,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[`Mailer > sendTranslatedEmail > reset > nl > should render reset 1 for locale nl 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > reset > nl > should render reset 1 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Beste John Doe,</p>
<p>Er is een wachtwoordherstel aangevraagd voor jouw account. Klik <a href="https://example.com">hier</a> om jouw wachtwoord opnieuw in te stellen.</p>
<p><strong>Heb je deze e-mail niet aangevraagd?</strong></p>
<p>Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Wachtwoordherstel",
  "text": "Beste John Doe,

Er is een wachtwoordherstel aangevraagd voor jouw account. Klik [hier](https://example.com) om jouw wachtwoord opnieuw in te stellen.

**Heb je deze e-mail niet aangevraagd?**

Jouw e-mailadres is mogelijk per ongeluk ingevoerd. Deze e-mail kan veilig worden genegeerd.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`Mailer > sendTranslatedEmail > welcome > en > should render welcome 0 for locale en 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > welcome > en > should render welcome 0 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello,</p>
<p>Thank you for registering your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welcome to Test App",
  "text": "Hello,

Thank you for registering your account. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[`Mailer > sendTranslatedEmail > welcome > en > should render welcome 1 for locale en 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > welcome > en > should render welcome 1 for locale en 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hello John Doe,</p>
<p>Thank you for registering your account. Before you can use your account, we need to verify your email address.</p>
<p>Please click <a href="https://example.com">here</a> to verify your email address.</p>
<p>Kind regards,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welcome to Test App",
  "text": "Hello John Doe,

Thank you for registering your account. Before you can use your account, we need to verify your email address.

Please click [here](https://example.com) to verify your email address.

Kind regards,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;

exports[`Mailer > sendTranslatedEmail > welcome > nl > should render welcome 0 for locale nl 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > welcome > nl > should render welcome 0 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Hallo,</p>
<p>Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welkom bij Test App",
  "text": "Hallo,

Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "test@example.com",
}
`;

exports[`Mailer > sendTranslatedEmail > welcome > nl > should render welcome 1 for locale nl 1`] =
  `undefined`;

exports[`Mailer > sendTranslatedEmail > welcome > nl > should render welcome 1 for locale nl 2`] = `
{
  "attachments": [],
  "from": "Appsemble <test@example.com>",
  "html": "<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta content="width=device-width, initial-scale=1" name="viewport">
</head>
<body>
<p>Beste John Doe,</p>
<p>Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.</p>
<p>Klik <a href="https://example.com">hier</a> om jouw e-mailadres te verifiëren.</p>
<p>Met vriendelijke groet,</p>
<p><em>Test App</em></p>
</body>
</html>
",
  "subject": "Welkom bij Test App",
  "text": "Beste John Doe,

Bedankt voor het registeren van jouw account. Voordat je jouw account kan gebruiken, moeten we jouw e-mailadres verifiëren.

Klik [hier](https://example.com) om jouw e-mailadres te verifiëren.

Met vriendelijke groet,

_Test App_
",
  "to": "John Doe <test@example.com>",
}
`;
